--- a/instance.yml
+++ b/instance.yml
@@ -1,19 +1,12 @@
-title: test
+title: Web-Error
 
 services:
-    - image: nginx:latest
+    - image: sliderboo/clbattthcmut-web-error:1.0
       ports:
-          - 80
+          - 8000
       environment:
-          - FLAG=flag{test}
-      cpu: 0.5
-      memory: 512m
-      name: nginx
-    - image: mysql:5.7
-      ports:
-          - 3306
-      environment:
-          - MYSQL_ROOT_PASSWORD=root
-      cpu: 1
-      memory: 1g
-      name: mysql
+          - FLAG=BKISC{3rr0r_b4s3d_sql_1nject10n???}  
+      cpu: 2
+      memory: 4G
+      name: web-error
+
