--- a/instance.yml
+++ b/instance.yml
@@ -1,7 +1,7 @@
 title: Web-Error
 
 services:
-    - image: sliderboo/clbattthcmut-web-error:1.0
+    - image: sliderboo/web-error:1.0
       ports:
           - 8000
       environment:
